--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
     <title>Increment Counter</title>
   </head>
   <body>
+    <div class="counter-container">
+      <i class="fab fa-twitter fa-3x"></i>
+      <div class="counter" data-target="12000"></div>
+      <span>Twitter Followers</span>
+    </div>
+          
+    <div class="counter-container">
+      <i class="fab fa-youtube fa-3x"></i>
+      <div class="counter" data-target="5000"></div>
+      <span>YouTube Subscribers</span>
+    </div>          
   </body>
 </html>
